--- a/views/top.ejs
+++ b/views/top.ejs
@@ -17,7 +17,7 @@
     <body>
         <header class="site-header">
             <div class="wrapper site-header__wrapper">
-                <a href="#" class="brand">klavierpedia</a>
+                <a href="#" class="brand"><image src="/public/image/wikilog.jpg"></a>
                 <nav class="nav">
                 <button class="nav__toggle" aria-expanded="false" type="button">
                     menu
