--- a/views/top.ejs
+++ b/views/top.ejs
@@ -11,13 +11,12 @@
         <link rel="stylesheet" type="text/css" href="http://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/move02/5-1/css/5-1.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/style.css">
-        <script src="/app.js"></script>
     </head>
     
     <body>
         <header class="site-header">
             <div class="wrapper site-header__wrapper">
-                <a href="#" class="brand"><image src="/public/image/wikilog.jpg"></a>
+                <a href="#" class="brand"><image src="image/wikilog.jpg"></image></a>
                 <nav class="nav">
                 <button class="nav__toggle" aria-expanded="false" type="button">
                     menu
