--- a/views/top.ejs
+++ b/views/top.ejs
@@ -6,6 +6,7 @@
         <title>klavierpedia</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="google-site-verification" content="_7RSTlNPMYFRNlCNeNCczqshsXX-3F5xn0EYkHoaq60" />
         <!--==============レイアウトを制御する独自のCSSを読み込み===============-->
         <link rel="stylesheet" type="text/css" href="http://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/move02/5-1/css/reset.css">
         <link rel="stylesheet" type="text/css" href="http://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/move02/5-1/css/5-1.css">
