--- a/views/top.ejs
+++ b/views/top.ejs
@@ -12,12 +12,14 @@
         <link rel="stylesheet" type="text/css" href="http://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/move02/5-1/css/5-1.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Cherry+Swash:700 rel="stylesheet">
     </head>
     
     <body>
         <header class="site-header">
             <div class="wrapper site-header__wrapper">
                 <a href="#" class="brand"><image src="image/wikilog.jpg"></image></a>
+                <span class="title-logo">KLAVIERPEDIA</span>
                 <nav class="nav">
                 <button class="nav__toggle" aria-expanded="false" type="button">
                     menu
