--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,8 @@ a {
 .top-wrapper {
     padding: 150px 0 180px 0;
     background-image: url(/image/dog.jpg);
+    background-color: rgba(255, 255, 255, 0.3);
+    background-blend-mode:lighten;
     background-size: cover;
     color: black;
     text-align: center;
@@ -24,6 +26,11 @@ a {
 .top-wrapper h1 {
     font-size: 45px;
     letter-spacing: 5px;
+    opacity: 0.8;
+}
+
+.top-wrapper p {
+    opacity: 0.8;
 }
 
 /*header*/
@@ -75,7 +82,8 @@ a {
 .nav__wrapper.active {
     visibility: visible;
     opacity: 1;
-    transform: translateY(0); } }
+    transform: translateY(0); } 
+}
 
 .nav__item a {
     display: block;
