--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,36 +13,10 @@ a {
     margin: 0 auto;
 }
 
-.top-wrapper {
-    padding: 150px 0 180px 0;
-    background-image: url(/image/dog.jpg);
-    background-color: rgba(255, 255, 255, 0.3);
-    background-blend-mode:lighten;
-    background-size: cover;
-    color: black;
-    text-align: center;
-}
-
-.top-wrapper h1 {
-    font-size: 45px;
-    letter-spacing: 5px;
-    opacity: 0.8;
-}
-
-.top-wrapper p {
-    opacity: 0.8;
-}
-
 /*header*/
-
-.brand {
-    font-weight: bold;
-    font-size: 20px;
-}
-
 .title-logo {
     font-size: 50px;
-    margin: 0 0 20px 160px;
+    margin: 0 0 20px 190px;
     font-family: 'Cherry Swash', cursive;
 }
 
@@ -87,7 +61,9 @@ a {
 
 .nav__item a {
     display: block;
-    padding: 1.5rem 1rem; }
+    padding: 1.5rem 1.5rem;
+    font-family: 'Cherry Swash', cursive;
+}
 
 .nav__toggle {
     display: none; }
