--- a/views/top.hbs
+++ b/views/top.hbs
@@ -55,3 +55,12 @@
         </div>
     </li>
 </ul>
+
+<div class="card">
+    <div class="card-body">
+        <h3>お問い合わせ先→明治大学ピアノの会KLAVIER 総務</h3>
+        <br>
+        <a href="https://twitter.com/klavier_piano"><i class="bi bi-twitter"></i>明治大学公式Twitterアカウント</a>
+        <p><i class="bi bi-envelope"></i>meiji.klavier2021@gmail.com </p>
+    </div>
+</div>
