--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -11,6 +11,7 @@
             <th scope="col">id</th>
             <th scope="col">Title</th>
             <th scope="col">URL</th>
+            <th scope="col">録音</th>
             <th scope="col" class="text-end">Action</th>
         </tr>
     </thead>
@@ -20,6 +21,7 @@
             <th scope="row">{{this.id}}</th>
             <td>{{this.Title}}</td>
             <td>{{this.URL}}</td>
+            <td>{{this.Record}}</td>
             <td class="text-end">
                 <a href="/editPrograms/{{this.id}}" type="button" class="btn btn-light btn-small"><i class="bi bi-pencil"></i> 編集</a>
                 <a href="/delete/{{this.id}}" type="button" class="btn btn-light btn-small"><i class="bi bi-person-x"></i> 消去</a>
