--- a/views/partials/user-form.hbs
+++ b/views/partials/user-form.hbs
@@ -10,6 +10,12 @@
             <label for="floatingInput">URL</label>
         </div>
     </div>
+    <div class="col-6">
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="floatingInput" value="{{this.Record}}" placeholder="Record" name="record">
+            <label for="floatingInput">録音　有or無</label>
+        </div>
+    </div>
     <div class="col-12 d-grid">
         <button class="btn btn-primary" type="submit">追加 or 変更</button>
     </div>
