--- a/views/programs.hbs
+++ b/views/programs.hbs
@@ -10,6 +10,7 @@
     <thead class="thead-dark">
         <tr>
             <th scope="col">Title</th>
+            <th scope="col">録音</th>
         </tr>
     </thead>
     <tbody>
@@ -18,6 +19,7 @@
             <td>
                 <a href={{this.URL}}>{{this.Title}}</a>
             </td>
+            <td>{{this.Record}}</td>
         </tr>
         {{/each}}
     </tbody>
